--- a/1.html
+++ b/1.html
@@ -13,9 +13,9 @@
     <li><a href="3.html">JavaScript</li></a>
 </ol>
 <ul>
-    <li>류승상</li>
-    <li>하혁지</li>
-    <li>김준식</li>
+    <li>노구</li>
+    <li>묘실</li>
+    <li>인생샤넬</li>
 </ul>
 
 
