--- a/2.html
+++ b/2.html
@@ -13,9 +13,9 @@
     <li><a href="3.html">JavaScript</li></a>
 </ol>
 <ul>
-    <li>류승상</li>
-    <li>하혁지</li>
-    <li>김준식</li>
+    <li>노구</li>
+    <li>묘실</li>
+    <li>인생샤넬</li>
 </ul>
 
 HTML 등의 마크업 언어로 작성된 문서가 실제로 웹사이트에 표현되는 방법을 정해주는 스타일 시트 언어.
