--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <li><a href="3.html">JavaScript</li></a>
 </ol>
 <ul>
-    <li>류승상</li>
-    <li>하혁지</li>
-    <li>김준식</li>
+<li>노구</li>
+    <li>묘실</li>
+    <li>인생샤넬dd</li>
 </ul>
 월드 와이드 웹(World Wide Web/WWW)은 1990년 12월 20일에 등장한 시스템으로, 전세계에 널리 퍼진 거미줄(Web)이란 단어 의미 그대로 인터넷 통신망에서 웹사이트를 하이퍼텍스트 마크업 언어로 작성하고, URL(uniform resource location)로 위치를 지정하고, 하이퍼텍스트 전송 프로토콜로 데이터를 전송하는 정보 시스템이다. 이 과정을 돕는 프로그램이 '웹 브라우저'와 '웹 서버'다. 'WWW', 'W3', 또는 간단하게 '웹(Web)'이라고도 하며, '따따따'라고도 읽는다.
 
